--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,7 @@ install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-order.jar &
   - chmod +x gradlew
+  - chmod +x ./driver/win/chromedriver.exe
 
 build_script:
-  - ./gradlew test -Dselenide.headless=true --info   # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info   # запускаем тест, флаг --info позволяет выводить больше информации
